hopefully fixed broken x overflow

--- a/code/project_iframes/iframe.css
+++ b/code/project_iframes/iframe.css
@@ -12,7 +12,7 @@ body{
     flex-wrap: nowrap;
     margin: 0%;
     box-sizing: border-box;
-    width: 100%;
+    width: fit-content;
     padding-top: 10%;
 
 }
